# adt-tools-base

./: .gitignore  .gitmodules  base.gradle  baseVersion.gradle  build.gradle  buildVersion.gradle  gradle.properties  gradlew  gradlew.bat  javadoc.gradle  publish.gradle  release.gradle  settings.gradle
.eclipse/: dictionary.txt
annotations/: build.gradle
apps/: .gitignore
apps/DeviceConfig/: build.gradle
asset-studio/: .classpath  .project  build.gradle
assetstudio/: .classpath  .gitignore  .project  build.gradle
assetstudio/etc/: manifest.txt
build-system/: .gitignore  changelog.txt
build-system/builder/: .gitignore  build.gradle
build-system/builder-model/: build.gradle
build-system/builder-test-api/: build.gradle
build-system/docs/: build.gradle
build-system/google-services/: build.gradle
build-system/gradle/: build.gradle
build-system/gradle-api/: build.gradle
build-system/gradle-core/: build.gradle
build-system/gradle-experimental/: build.gradle
build-system/gradle-model/: build.gradle
build-system/integration-test/: .gitignore  build.gradle
build-system/manifest-merger/: .classpath  build.gradle
build-system/profile/: build.gradle
build-system/project-test/: build.gradle  build.xml
build-system/project-test-lib/: build.gradle
build-system/transform-api/: build.gradle
chartlib/: build.gradle
chunkio/: README.md  build.gradle
chunkio-processor/: README.md
common/: .classpath  build.gradle  manifest.txt
ddmlib/: .classpath  build.gradle
draw9patch/: build.gradle
fast_deploy_runtime/: push.sh  settings.gradle  update-prebuilt.sh
fdr/: build.gradle
files/: UPDATING_DEVICES.txt  devices.xml  proguard-android-optimize.txt
gradle-import/: build.gradle
jaxb-inheritance-plugin/: build.gradle
jobb/: NOTICE  build.gradle
layoutlib/: build.prop
layoutlib-api/: .classpath  build.gradle
layoutlib_api/: .classpath  README.txt  build.gradle
lint/: .gitignore
manifest-merger/: build.gradle
manifmerger/: .classpath  .project  build.gradle
ninepatch/: build.gradle
perflib/: build.gradle
pixelprobe/: README.md  build.gradle
profiler/: Android.mk  Application.mk  README.txt  build.gradle  settings.gradle
profiler/native/: .gitignore  CMakeLists.txt  README.md  build.gradle
profiler/native/cmake/: Android.cmake  adb.cmake  android-arm64-v8a.cmake  android-armeabi-v7a.cmake  android-x86.cmake  android.cmake  darwin-arm64-v8a.cmake  darwin-armeabi-v7a.cmake  darwin-host.cmake  darwin-x86.cmake  linux-arm64-v8a.cmake  linux-armeabi-v7a.cmake  linux-host.cmake  linux-linux.cmake  linux-x86.cmake  proto_compile.cmake  test.cmake
profiler/native/cpu/: CMakeLists.txt  cpu_cache.cc  cpu_cache.h  cpu_collector.cc  cpu_collector.h  cpu_profiler_component.h  cpu_profiler_service.cc  cpu_profiler_service.h  cpu_sampler.cc  cpu_sampler.h  cpu_usage_data_collector.cc  cpu_usage_data_collector.h  cpu_usage_sampler.cc  cpu_usage_sampler.h
profiler/native/network/: CMakeLists.txt  connection_data_collector.cc  connection_data_collector.h  connection_data_collector_test.cc  connection_sampler.cc  connection_sampler.h  connection_sampler_test.cc  network_collector.cc  network_collector.h  network_data_collector.cc  network_data_collector.h  network_data_collector_test.cc  network_files.h  network_sampler.cc  network_sampler.h  network_sampler_test.cc  profiler_server_network.cc  profiler_server_network.h  traffic_data_collector.cc  traffic_data_collector.h  traffic_data_collector_test.cc  traffic_sampler.cc  traffic_sampler.h  traffic_sampler_test.cc
profiler/native/perfa/: CMakeLists.txt  agent_component.h  perfa.cc  perfa.h
profiler/native/perfa/support/: profiler_service.cc
profiler/native/perfd/: CMakeLists.txt  README.md  perfa_service.cc  perfa_service.h  perfd.cc  profiler_component.h  profiler_service.cc  profiler_service.h
profiler/native/perfd/memory/: CMakeLists.txt  memory_collector.cc  memory_collector.h  memory_data_cache.cc  memory_data_cache.h  memory_levels_sampler.cc  memory_levels_sampler.h  memory_levels_sampler_test.cc  memory_profiler_component.h  memory_service.cc  memory_service.h
profiler/native/profiler_server/: profiler_data_service.h
profiler/native/proto/: CMakeLists.txt
profiler/native/testdata/network/: open_connection_listening_all_interfaces.txt  open_connection_uid_matched1.txt  open_connection_uid_matched2.txt  open_connection_uid_unmatched.txt  traffic_uid_matched_multiple_entries.txt  traffic_uid_matched_single_entry.txt  traffic_uid_unmatched.txt  uid_found_after_prefix.txt  uid_found_after_prefix_and_spaces.txt  uid_invalid_letters.txt  uid_missing.txt  uid_negative_number.txt
profiler/native/testdata/perfd/memory/: memory_data_valid_v3.txt  memory_data_valid_v4.txt
profiler/native/testdata/utils/: file_reader_large.txt  file_reader_multiple_lines.txt  file_reader_small.txt
profiler/native/utils/: CMakeLists.txt  activity_manager.cc  activity_manager.h  android_studio_version.h  bash_command.cc  bash_command.h  clock.cc  clock.cpp  clock.h  clock.mac.cc  clock.mac.cpp  config.h  file_reader.cc  file_reader.h  file_reader_test.cc  installer.cc  installer.h  log.android.cc  log.cc  log.h  package_manager.cc  package_manager.h  profiler_file.cc  profiler_file.h  stopwatch.cc  stopwatch.cpp  stopwatch.h  stopwatch_test.cc  time_value_buffer.h  time_value_buffer_test.cc  timespec_math.h  timespec_math_test.cc  timestamp.cc  timestamp.h  token.cc  token.h
profiler/perfd/: CMakeLists.txt  build.gradle  perfd.cc  perfd.cpp  profiler_service.cc
repository/: build.gradle
rpclib/: build.gradle
rule-api/: .classpath  .project  README.txt  build.gradle
rule_api/: .classpath  .project  build.gradle
sdk-common/: .classpath  build.gradle
sdk_common/: .classpath  .project  build.gradle
sdklib/: .classpath  build.gradle  test.gradle
sdklib2/: .classpath  .project  manifest.txt
sdkmanager/: .gitignore
sdkstats/: .classpath  .project
templates/: build.gradle
testutils/: .classpath  .project  NOTICE  build.gradle
vector-drawable-tool/: build.gradle
(+6196 files in other folders)
